2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml: small typo
	http://lists.freedesktop.org/archives/xdg/2007-March/009437.html

2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml: this changes the type of the version from
	numeric to string. It's needed if we consider the possibility that
	there are some desktop entry files out there using 0.9.x as a value
	for this key. The change doesn't break anything.
	http://lists.freedesktop.org/archives/xdg/2007-March/009437.html

2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml: UnmountIcon is a localestring key.
	http://lists.freedesktop.org/archives/xdg/2007-March/009437.html

2007-04-28  Vincent Untz  <vuntz@gnome.org>

	* desktop-entry-spec.xml: clarify that lists should always end with a
	semicolon, even if there's only one value.
	http://lists.freedesktop.org/archives/xdg/2007-March/009437.html

2007-02-06  Waldo Bastian <waldo.bastian@intel.com>
	* Clearify that %U may result in either local paths or file: URLs
	* Deprecate %d, %n, %D and %N. They aren't usable on Gnome and
	you can do the same with dirname and basename in a script.
	* Clearify that %f, %u, %F or %U should only be used once.
	* Clearify that these codes should be ignored if there is no file
	to open.
	* Forbid the use of field codes in quoted arguments.
	* Clearify that %F and %U should only be used as a stand alone argument.
	* Bumped version to 1.0

2006-10-30  Waldo Bastian <waldo.bastian@intel.com>
        * Remove equal sign from reserved characters in Exec args
        * Add backslash to list of reserved characters in Exec args

2006-10-04  Waldo Bastian <waldo.bastian@intel.com>
        * Deprecate %v, it is FSDevice specific

2006-08-30  Waldo Bastian <waldo.bastian@intel.com>
        * list FSDevice type as KDE specific
        * refer to Icon Theme Specification

2006-08-22  Waldo Bastian <waldo.bastian@intel.com>
        * clarification of Exec key